# weather_fastapi

./: .dockerignore  Dockerfile  README.md  docker-compose.yaml  main.py  model.py  pyproject.toml  service.py  test_main.py
templates/: index.html
